--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <!-- FIX 2: Added Meta Description -->
     <meta name="description" content="Browse the 3D Printing Duo catalog. Featuring Labubu figures, keychains, Blob Rocks, and more unique 3D printed items.">
     <title>Product Catalog | 3D Printing Duo</title>
-    <link rel="icon" href="logo.jpg" type="image/jpeg">
+    <link rel="icon" href="logo.webp" type="image/jpeg">
     
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" as="style">
@@ -188,3 +188,4 @@
 
 </body>
 </html>
+
