--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <!-- FIX 2: Added Meta Description -->
     <meta name="description" content="Browse the 3D Printing Duo catalog. Featuring Labubu figures, keychains, Blob Rocks, and more unique 3D printed items.">
     <title>Product Catalog | 3D Printing Duo</title>
-    <link rel="icon" href="logo.webp" type="image/jpeg">
+    <link rel="icon" href="logo.webp" type="image/webp">
     
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" as="style">
@@ -136,7 +136,7 @@
     <div class="container">
         <header>
             <a href="index.html">
-                <img src="logo.jpg" alt="3D Printing Duo" class="logo-img" width="112" height="60">
+                <img src="logo.webp" alt="3D Printing Duo" class="logo-img" width="112" height="60">
             </a>
             <a href="index.html" class="back-btn"><i class="fas fa-arrow-left"></i> Back to Home</a>
         </header>
@@ -188,4 +188,5 @@
 
 </body>
 </html>
+
 
